--- a/source/pages/malldetail/malldetail.wxss
+++ b/source/pages/malldetail/malldetail.wxss
@@ -306,3 +306,20 @@
     width: 95%;
     border-radius: 20px;
 }
+.view_qipao{
+    width: 25rpx;
+    height: 25rpx;  
+    background-color:red;  
+    border-radius: 50%;  
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    position: absolute;
+    top: 0;
+    left: 12px;
+  }
+  
+  .text_qipao{
+    color: white;
+    font-size: 20rpx;
+  }
