--- a/source/pages/addpingjia/addpingjia.wxml
+++ b/source/pages/addpingjia/addpingjia.wxml
@@ -23,7 +23,7 @@
   </view>
 </view>
 
-<view class="margin-30">
+<view  style="margin:30px 10px">
   <view class="flex-row flex-center" >
     <view class="h5 txt-33">商品评分</view>
     <!-- <view class="flex-1"></view> -->
@@ -42,7 +42,7 @@
     <!-- <view class="h5 txt-33 margin-bottom-20">商品评价图片</view> -->
     <view class="flex-row flex-wrap" style="align-items:center;">
       <view class="pore" wx:for="{{imglist}}" wx:key='k' wx:for-index='idx'>
-        <image src="{{uploadpath}}pingjia/{{item.img}}" mode="aspectFit" bindtap="uploadimg" id='{{idx}}' class="uploadimg"></image>
+        <image src="{{uploadpath}}pingjia/{{item.img}}" bindtap="uploadimg" id='{{idx}}' class="uploadimg"></image>
         <image src="{{uploadpath}}resource/{{res.shanchu}}" class="shanchu" bindtap="shanchu" id="{{idx}}"></image>
       </view>
 
