--- a/source/pages/addpingjia/addpingjia.wxss
+++ b/source/pages/addpingjia/addpingjia.wxss
@@ -8,17 +8,19 @@ page{
 }
 
 .uploadimg {
-    width: 200rpx;
-    height: 200rpx;
-    margin: 0 10px;
+    width: 100px;
+    height: 100px;
+  
 }
 
 .pore {
     position: relative;
+    width: 111px;
+    height: 111px;
 }
 
 .shanchu {
-    width: 70rpx;
+    width: 40rpx;
     height: 70rpx;
     position: absolute;
     right: 0;
@@ -112,7 +114,7 @@ page{
 }
 .pingjianeirong{
   background-color: #F3F6F7;
-  padding: 10px;
+  padding: 10px 0px;
   border-radius: 4px; 
   margin-top: 17px;
 }
