--- a/source/pages/mypingjia/mypingjia.wxss
+++ b/source/pages/mypingjia/mypingjia.wxss
@@ -23,6 +23,8 @@
     color: #999999;
     line-height: 24px;
     text-shadow: 0px 0px 18rpx rgba(0, 0, 0, 0.08);
+    display: flex;
+    align-items: center;
 }
 
 .pingjiacontent {
