--- a/source/pages/ordersubmit/ordersubmit.wxss
+++ b/source/pages/ordersubmit/ordersubmit.wxss
@@ -165,9 +165,6 @@ page {
 }
 .main_boxs{
     width: 100%;
-
-
-
     display: flex;
     border-radius: 10px;
     margin-top: 10px;
@@ -180,6 +177,7 @@ page {
     width: 100%;
     height: 100%;
     align-items: center;
+    position: relative;
 }
 
 .shop_car_img {
@@ -247,4 +245,18 @@ page {
     font-weight: 400;
     color: #666666;
     line-height: 20px;
+}
+.txtmore {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
+.mendiantitle{
+    display: none;
 }
