--- a/source/pages/ordersubmit/ordersubmit.wxss
+++ b/source/pages/ordersubmit/ordersubmit.wxss
@@ -55,7 +55,7 @@ page {
 .goods {
     /* margin: 0 24rpx;
     padding: 42rpx 24rpx; */
-    margin-top: 15px;
+    margin-top: 10px;
     background-color: #FFFFFF;
     border-radius: 10px;
     margin-left: 10px;
@@ -79,7 +79,7 @@ page {
 }
 
 .total {
-    margin: 0 10px;
+    margin: 10px 10px;
     background-color: #FFFFFF;
     border-radius: 10px;
     padding: 13px;
