--- a/source/pages/refundlist/refundlist.wxss
+++ b/source/pages/refundlist/refundlist.wxss
@@ -1,4 +1,7 @@
 /* pages/orderlist/orderlist.wxss */
+page{
+    background: #F3F6F7;
+}
 .fixtop {
     width: 100vw;
     position: fixed;
@@ -21,7 +24,7 @@
     background: #44B549;
 }
 .orderbox {
-    margin: 0 24rpx ;
+    margin: 20rpx 24rpx ;
     padding: 30rpx 24rpx;
     background: #FFFFFF;
     border-radius: 20rpx;
